--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ cache:
   directories:
   - node_modules
 script:
-- yarn test
-- yarn build
+- npm test
+- npm run build
 deploy:
   provider: heroku
   app: tranquil-thicket-98701
