--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/prop-types": "^15.5.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "prettier": "^1.13.7",
     "react-scripts": "1.1.1"
   },
   "scripts": {
